--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
     "antd": "^5.2.2",
-    "axios": "^1.3.3",
-    "lodash": "^4.17.21",
+    "dotenv": "^16.0.3",
+    "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.8.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
@@ -26,12 +27,11 @@
     "antd-theme-webpack-plugin": "^1.3.9",
     "babel-loader": "^9.1.2",
     "babel-plugin-import": "^1.13.6",
+    "babel-plugin-module-resolver": "^5.0.0",
     "css-loader": "^6.7.3",
+    "dotenv-webpack": "^8.0.1",
     "html-webpack-plugin": "^5.5.0",
     "install": "^0.13.0",
-    "less": "^4.1.3",
-    "less-loader": "^11.1.0",
-    "less-vars-to-js": "^1.3.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
